--- a/translations/en-ca.json
+++ b/translations/en-ca.json
@@ -1,9 +1,7 @@
 {
-	"name": "English (CA)",
-	"extends": [
-		"en-us"
-	],
-	"values": {
-		"Repo-Sidebar-LocalBranches": "Local Branches, ay"
-	}
+  "name": "English (CA)",
+  "extends": ["en-us"],
+  "values": {
+    "Repo-Sidebar-LocalBranches": "Local Branches, ay"
+  }
 }
