--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -1,12 +1,10 @@
 {
-	"name": "English (US)",
-	"extends": [
-		"en-gb"
-	],
-	"values": {
-		"OpenRepository-Sidebar-Favorites": "Favorites",
+  "name": "English (US)",
+  "extends": ["en-gb"],
+  "values": {
+    "OpenRepository-Sidebar-Favorites": "Favorites",
 
-		"FlatRepositories-Row-MarkAsFavorite": "Mark as favorite",
-		"FlatRepositories-Row-UnmarkAsFavorite": "Unmark as favorite"
-	}
+    "FlatRepositories-Row-MarkAsFavorite": "Mark as favorite",
+    "FlatRepositories-Row-UnmarkAsFavorite": "Unmark as favorite"
+  }
 }
