Added translations for the branch context menu

--- a/translations/en-gb.json
+++ b/translations/en-gb.json
@@ -3,12 +3,21 @@
   "extends": [],
   "values": {
     "Repo-Sidebar-LocalBranches": "Local branches",
+    "Repo-Sidebar-CheckoutLocalBranch": "Checkout ${branch}",
+    "Repo-Sidebar-RenameLocalBranch": "Rename ${branch}",
+    "Repo-Sidebar-DeleteLocalBranch": "Delete ${branch}",
     "Repo-Sidebar-Remotes": "Remotes",
     "Repo-Sidebar-Tags": "Tags",
     "Repo-Files-Files": "Files",
     "Repo-Files-FileCount": "${count} Files",
     "Repo-UnableToCheckOutLocalBranch-Title": "Error",
     "Repo-UnableToCheckOutLocalBranch-Message": "Unable to checkout the branch: ${branch}",
+    "Repo-UnableToRenameLocalBranch-Title": "Error",
+    "Repo-UnableToRenameLocalBranch-Message": "Unable to rename the branch: ${branch}",
+    "Repo-UnableToDeleteLocalBranch-Title": "Error",
+    "Repo-UnableToDeleteLocalBranch-Message": "Unable to delete the branch: ${branch}",
+    "Repo-Sidebar-RenameLocalBranchDialog-Title": "Rename ${branch}",
+    "Repo-Sidebar-RenameLocalBranchDialog-Message": "What would you like ${branch} to be called?",
 
     "OpenRepository-Header-Title": "Repositories",
     "OpenRepository-Header-Settings": "Settings",
