Added translations for the settings identities

--- a/translations/en-gb.json
+++ b/translations/en-gb.json
@@ -75,6 +75,36 @@
     "SettingsIdentities-Add": "Add",
     "SettingsIdentities-AddDeviceFlow": "Use Device Flow",
     "SettingsIdentities-Revoke": "Revoke",
+    "SettingsIdentities-GitHubCannotFind-Title": "Not Found!",
+    "SettingsIdentities-GitHubCannotFind-Message": "Cannot find the added GitHub account",
+    "SettingsIdentities-GitHubCannotInsert-Title": "Cannot Save!",
+    "SettingsIdentities-GitHubCannotInsert-Message": "Cannot save the added GitHub account",
+    "SettingsIdentities-GitHubInserted-Title": "Added!",
+    "SettingsIdentities-GitHubInserted-Message": "Added the new GitHub account",
+    "SettingsIdentities-GitHubUpdated-Title": "Updated!",
+    "SettingsIdentities-GitHubUpdated-Message": "Updated a GitHub account",
+    "SettingsIdentities-GitHubRevoked-Title": "Revoked!",
+    "SettingsIdentities-GitHubRevoked-Message": "Revoked access to the GitHub account, ${username}",
+    "SettingsIdentities-GitLabCannotFind-Title": "Not Found!",
+    "SettingsIdentities-GitLabCannotFind-Message": "Cannot find the added GitLab account",
+    "SettingsIdentities-GitLabCannotInsert-Title": "Cannot Save!",
+    "SettingsIdentities-GitLabCannotInsert-Message": "Cannot save the added GitLab account",
+    "SettingsIdentities-GitLabInserted-Title": "Added!",
+    "SettingsIdentities-GitLabInserted-Message": "Added the new GitLab account",
+    "SettingsIdentities-GitLabUpdated-Title": "Updated!",
+    "SettingsIdentities-GitLabUpdated-Message": "Updated a GitHub account",
+    "SettingsIdentities-GitLabRevoked-Title": "Revoked!",
+    "SettingsIdentities-GitLabRevoked-Message": "Revoked access to the GitLab account, ${username}",
+    "SettingsIdentities-BitBucketCannotFind-Title": "Not Found!",
+    "SettingsIdentities-BitBucketCannotFind-Message": "Cannot find the added BitBucket account",
+    "SettingsIdentities-BitBucketCannotInsert-Title": "Cannot Save!",
+    "SettingsIdentities-BitBucketCannotInsert-Message": "Cannot save the added BitBucket account",
+    "SettingsIdentities-BitBucketInserted-Title": "Added!",
+    "SettingsIdentities-BitBucketInserted-Message": "Added the new BitBucket account",
+    "SettingsIdentities-BitBucketUpdated-Title": "Updated!",
+    "SettingsIdentities-BitBucketUpdated-Message": "Updated a GitHub account",
+    "SettingsIdentities-BitBucketRevoked-Title": "Revoked!",
+    "SettingsIdentities-BitBucketRevoked-Message": "Revoked access to the BitBucket account, ${username}",
 
     "SettingsCredits-Title": "Credits",
 
@@ -113,6 +143,8 @@
     "GitHubDeviceFlow-ClickDone": "Click Done once GitHub says you're all set!",
     "GitHubDeviceFlow-Done": "Done",
     "GitHubDeviceFlow-Cancel": "Cancel",
+    "GitHubDeviceFlow-Copied-Title": "Copied!",
+    "GitHubDeviceFlow-Copied-Message": "Copied the code",
 
     "ScriptWarning-Title": "Beware of external scripts!",
     "ScriptWarning-Message1": "Only use scripts which either you wrote, or you have examined to the point where you understand their functionality fully.",
@@ -127,9 +159,9 @@
     "ScriptAPI-UnableToFindScript-Message": "Unable to find the script: ${label}",
 
     "Github-GeneratePAT-UiBlockDialog-Title": "Waiting",
-    "Github-GeneratePAT-UiBlockDialog-Message": "Waiting for you to log into Github via your browser",
+    "Github-GeneratePAT-UiBlockDialog-Message": "Waiting for you to log into GitHub via your browser",
     "Gitlab-GeneratePAT-UiBlockDialog-Title": "Waiting",
-    "Gitlab-GeneratePAT-UiBlockDialog-Message": "Waiting for you to log into Gitlab via your browser",
+    "Gitlab-GeneratePAT-UiBlockDialog-Message": "Waiting for you to log into GitLab via your browser",
     "BitBucket-GeneratePAT-UiBlockDialog-Title": "Waiting",
     "BitBucket-GeneratePAT-UiBlockDialog-Message": "Waiting for you to log into BitBucket via your browser"
   }
