--- a/translations/en-gb.json
+++ b/translations/en-gb.json
@@ -11,6 +11,9 @@
     "Repo-Sidebar-Remotes-UnableToFetch-Title": "Unable to fetch",
     "Repo-Sidebar-Remotes-UnableToFetch-Message": "Unable to fetch from a remote for the repository ${repository}",
     "Repo-Sidebar-Tags": "Tags",
+    "Repo-Sidebar-FocusLocalBranch": "Focus ${branch}",
+    "Repo-Sidebar-FocusAddLocalBranch": "Add ${branch} to focus",
+    "Repo-Sidebar-UnfocusLocalBranch": "Remove ${branch} from focus",
     "Repo-Files-Files": "Files",
     "Repo-Files-FileCount": "${count} Files",
     "Repo-UnableToCheckOutLocalBranch-Title": "Error",
